# EchoMIDI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanfile.txt  preset.json
EchoMIDIApp/: CMakeLists.txt
EchoMIDIApp/include/: EchoMIDI.h  EchoManager.cpp  EchoManager.h
EchoMIDIApp/src/: EchoMIDI.cpp  EchoManager.cpp
include/: Echoer.h  FocusHook.h  MIDI.h
resources/: EchoMIDIFigure.xcf
src/: EchoMIDI.cpp  Echoer.cpp  FocusHook.cpp
